Created Airports Search page and linked to the index page Airport Search button.

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,6 @@
     
     h1 {
       font-size: 50px;
-      text: align center;r;
     }
 
     .buttons {
@@ -70,8 +69,10 @@
       font-size: 40px;
     }
 
-    p{
+    .bodytext {
       font-size: 35px;
+      font-style: italic;
+      line-height: 2;
     } 
     
     .image-content {
@@ -92,7 +93,8 @@
     <h1>Aviation</h1>
     
     <div class="buttons">
-      <button class="button">Airport Search</button>
+      <a href="/" button class="button">Home</a>
+      <a href="/airports" class="button">Airport Search</a>
       <button class="button">Airline Search</button>
       <button class="button">Airline Aggregation</button>
       <button class="button">Trip Recommendation</button>
@@ -104,7 +106,7 @@
   <div class="content">
     <div class="text-content">
       <h2>About Aviation</h2>
-      <p>
+      <p class = "bodytext">
         Aviation is an airline search engine. You can easily retrieve meaningful information related to airports, airlines, and travel routes without any technical knowledge. You can start searching for airports and flights, and get personalized trip recommendations based on your preferences with the features provided in the menu bar above.
       </p>
     </div>
@@ -114,5 +116,7 @@
     </div>
   </div>
 
+  <p>Copyright 2023, TEX</p>
+  
 </body>
 </html>
