Created Airline Search html and connected to the Airline Search button in different pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,9 +93,9 @@
     <h1>Aviation</h1>
     
     <div class="buttons">
-      <a href="/" button class="button">Home</a>
+      <a href="/" class="button">Home</a>
       <a href="/airports" class="button">Airport Search</a>
-      <button class="button">Airline Search</button>
+      <a href="/airlines" class="button">Airline Search</a>
       <button class="button">Airline Aggregation</button>
       <button class="button">Trip Recommendation</button>
     </div>
