--- a/templates/airports.html
+++ b/templates/airports.html
@@ -154,7 +154,7 @@
     <div class="buttons">
       <a href="/" button class="button">Home</a>
       <a href="/airports" class="button">Airport Search</a>
-      <button class="button">Airline Search</button>
+      <a href="/airlines" class="button">Airline Search</a>
       <button class="button">Airline Aggregation</button>
       <button class="button">Trip Recommendation</button>
     </div>
