Created Airline Aggregation page and linked to the Airline Aggregation button in every  pages.

--- a/templates/airlines.html
+++ b/templates/airlines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Search Airport - Aviation</title>
+  <title>Search Airlines - Aviation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -155,7 +155,7 @@
       <a href="/" button class="button">Home</a>
       <a href="/airports" class="button">Airport Search</a>
       <a href="/airlines" class="button">Airline Search</a>
-      <button class="button">Airline Aggregation</button>
+      <a href="/aggregation" class="button">Airline Aggregation</a>
       <button class="button">Trip Recommendation</button>
     </div>
   </div>
