--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
       <a href="/" class="button">Home</a>
       <a href="/airports" class="button">Airport Search</a>
       <a href="/airlines" class="button">Airline Search</a>
-      <button class="button">Airline Aggregation</button>
+      <a href="/aggregation" class="button">Airline Aggregation</a>
       <button class="button">Trip Recommendation</button>
     </div>
   </div>
