Created Trip Recommendation page and linked it with the Trip Recommendation button in every pages.

--- a/templates/aggregation.html
+++ b/templates/aggregation.html
@@ -117,7 +117,7 @@
         <a href="/airports" class="button">Airport Search</a>
         <a href="/airlines" class="button">Airline Search</a>
         <a href="/aggregation" class="button">Airline Aggregation</a>
-        <button class="button">Trip Recommendation</button>
+        <a href="/recommendation" class="button">Trip Recommendation</a>
       </div>
     </div>
 
