--- a/templates/index.html
+++ b/templates/index.html
@@ -2,92 +2,10 @@
 <html>
 <head>
   <title>Aviation</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .header-container {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #f0f0f0;
-      padding: 20px 0;
-      margin-bottom: 20px;
-    }
-    
-    h1 {
-      font-size: 50px;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 20px;
-    }
-
-    .button {
-      padding: 20px 30px;
-      background-color: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin: 0 10px;
-      font-size: 20px;
-    }
-
-    .button:hover {
-      background-color: #2980b9;
-    }
-    
-    header {
-      margin: 60px;
-      font-size: 80px;
-      font-weight: bold;
-    }
-    .content {
-      display: flex;
-      flex-direction: row;
-      width: 80%;
-      margin: 0 auto;
-    }
-
-    .text-content {
-      flex: 1;
-      padding: 20px;
-      text-align: left;
-    }
-
-    h2 {
-      font-size: 40px;
-    }
-
-    .bodytext {
-      font-size: 35px;
-      font-style: italic;
-      line-height: 2;
-    } 
-    
-    .image-content {
-      flex: 1;
-      padding: 20px;
-    }
-
-    .image-content img {
-      width: 100%;
-      height: auto;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="static/styles.css"/>
 </head>
 
-  <body>
+<body>
 
   <div class="header-container">
     <h1>Aviation</h1>
@@ -103,15 +21,15 @@
   
   <header>Find the best flights</header>
   
-  <div class="content">
-    <div class="text-content">
+  <div class="home-content">
+    <div class="home-text-content">
       <h2>About Aviation</h2>
-      <p class = "bodytext">
+      <p class = "home-bodytext">
         Aviation is an airline search engine. You can easily retrieve meaningful information related to airports, airlines, and travel routes without any technical knowledge. You can start searching for airports and flights, and get personalized trip recommendations based on your preferences with the features provided in the menu bar above.
       </p>
     </div>
 
-    <div class="image-content">
+    <div class="home-image-content">
       <img src="https://cpts415aviation.xinruli1.repl.co/static/HomePageBanner.jpg" alt="Image">
     </div>
   </div>
