--- a/static/styles.css
+++ b/static/styles.css
@@ -64,7 +64,8 @@ header {
 .home-text-content {
   flex: 1;
   padding: 20px;
-  text-align: left;
+  text-align: center;
+  margin-right: 50px;
 }
 
 h2 {
@@ -85,6 +86,7 @@ h2 {
 .home-image-content img {
   width: 100%;
   height: auto;
+  border-radius: 10px;
 }
 
 .sub-bodytext {
@@ -188,7 +190,7 @@ h3 {
   padding: 20px 35px; 
   font-size: 25px; 
   border: none;
-  border-radius: 8px;
+  border-radius: 10px;
   background-color: #27ae60;
   color: white;
   cursor: pointer;
@@ -221,7 +223,7 @@ h3 {
 .vertical-container img {
   max-width: 100%;
   max-height: 98.5%;
-  border-radius: 5px;
+  border-radius: 10px;
 
 }
 
@@ -238,7 +240,7 @@ h3 {
   max-width: 100%;
   max-height: 50%;
   margin-bottom: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
 
 }
 
