--- a/static/styles.css
+++ b/static/styles.css
@@ -109,6 +109,11 @@ h2 {
 
 }
 
+form{
+  display: inline-block;
+  text-align: center;
+}
+
 .input-row {
   display: flex;
   flex-wrap: wrap;
@@ -251,4 +256,32 @@ p {
 .copyright {
     position: absolute;
     bottom: 5px;
+}
+
+.airport-info {
+  width: 80%;
+  margin-top: 20px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.message {
+  text-align: center;
+  font-style: italic;
+  color: #666;
 }
