--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -24,25 +24,43 @@
 
   <div class="search-container">
     <h2 class="search-header">Search for Flight Information</h2>
-    <div class="input-row">
-      <div class="input-box">
-        <label for="airport-location">Location:</label>
-        <input type="text" id="airport-location" name="airport-location">
+    <form action = "/search_trip", method="GET">
+      <div class="input-row">
+        <div class="input-box">
+          <label for="source-country">From Country:</label>
+          <input type="text" id="source-country" name="source-country">
+        </div>
+        <div class="input-box">
+          <label for="source-city">City:</label>
+          <input type="text" id="source-city" name="source-city">
+        </div>
+        <div class="input-box">
+          <label for="source-airport">Airport:</label>
+          <input type="text" id="source-airport" name="source-airport">
+        </div>
+        <div class="input-box">
+          <label for="destination-country">To Country:</label>
+          <input type="text" id="destination-country" name="destination-country">
+        </div>
+        <div class="input-box">
+          <label for="destination-city">City:</label>
+          <input type="text" id="destination-city" name="destination-city">
+        </div>
+        <div class="input-box">
+          <label for="destination-airport">Airport:</label>
+          <input type="text" id="destination-airport" name="destination-airport">
+        </div>
+        <div class="input-box">
+          <label for="airline-name">Airline Name:</label>
+          <input type="text" id="airline-name" name="airline-name">
+        </div>
+        <div class="input-box">
+          <label for="stops">Stops:</label>
+          <input type="text" id="stops" name="stops">
+        </div>
       </div>
-      <div class="input-box">
-        <label for="check-in">Check-In:</label>
-        <input type="text" id="check-in" name="check-in">
-      </div>
-      <div class="input-box">
-        <label for="check-out">check-out:</label>
-        <input type="text" id="check-out" name="check-out">
-      </div>
-      <div class="input-box">
-        <label for="stops">Stops:</label>
-        <input type="text" id="stops" name="stops">
-      </div>
-    </div>
-    <button class="go-button">Go</button>
+      <button type="submit" class="go-button">Go</button>
+    </form>
   </div>
 
   <h3>Popular Destinations</h3>
