--- a/templates/aggregation_result.html
+++ b/templates/aggregation_result.html
@@ -18,19 +18,25 @@
             <a href="/recommendation" class="button">Trip Recommendation</a>
         </div>
     </div>
-
-    <div class="aggre-content">
-
-        <header class="sub-header">Airline Aggregation Result</header>
-
-        <ul>
-            {% for item in result %}
-                <li>{{ item._id }}: {{ item.count }}</li>
-            {% endfor %}
-        </ul>
-
-        <p class="copyright">Copyright 2023, TEX</p>
+    <div class = "airport-info">
+        <header class="sub-header">{{title}}</header>
+        <table>
+            <thead>
+                <tr>
+                    <th>Country</th>
+                    <th>Count</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in result %}
+                    <tr>
+                        <td>{{ item._id}}</td>
+                        <td>{{ item.count}}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-
+    
 </body>
 </html>
