Implemented the Trip Recommendation feature with mongodb aggregate function. MapReduce is no longer supported in mongoDB.

--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -14,7 +14,7 @@
       <a href="/airports" class="button">Airport Search</a>
       <a href="/airlines" class="button">Airline Search</a>
       <a href="/aggregation" class="button">Airline Aggregation</a>
-      <a href="/recoomendation" class="button">Trip Recommendation</a>
+      <a href="/recommendation" class="button">Trip Recommendation</a>
     </div>
   </div>
 
