--- a/templates/airports.html
+++ b/templates/airports.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Search Airport - Aviation</title>
-  <link rel="stylesheet" type="text/css" href="static/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 
