--- a/templates/airportsinfo.html
+++ b/templates/airportsinfo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Airports List - Aviation</title>
-        <link rel="stylesheet" type="text/css" href="static/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     </head>
     <body>
         <div class="header-container">
